fix: revert back wrongfully removed div element for inner-abcjs renderer that causes entire svg canvas output to load auto overflow styles by default

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -15,6 +15,7 @@ textarea {
 
   #paper {
     max-width: 740px;
+    overflow-y: hidden;
   }
 
 .code-results {
